--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <img id="Planta1Ft1" height="40px" src="img/fot1/fot1_plantaCRECER.png" class="img-puestas" style="top:50%;left: 63.5%;" />
             <img id="Planta2Ft1" height="40px" src="img/fot1/fot1_plantaCRECER.png" class="img-puestas" style="top:64.5%;left: 63%;" />
         </div>
-        <div style="background-color: transparent;width:510px;height: 470px;">
+        <div style="background-color: transparent;width:510px;height: 470px;padding: 20px;text-align: justify;">
             <p class="textoCudadrado">
                 A través de esta infografía, queremos compartir nuestra propuesta tecnológica con base en <b>once prácticas para una caficultura con enfoque climático y sostenible.</b>
             </p>
@@ -53,7 +53,7 @@
             <img src="img/fot2/fot2_ESTATICO.png" class="img-puestas" style="top:10%;left: 8%;" />
             <img id="plantaFt2" height="40px"  src="img/fot2/fot2_plantaCRECER.png" class="img-puestas" style="top:70%;left: 20%;" />
         </div>
-        <div style="background-color: transparent;width:510px;height: 430px;">
+        <div id="sec2b" style="background-color: transparent;width:510px;height: 430px;padding: 20px;text-align: justify;">
             <p class="textoCudadrado">
                 Este aprendizaje se basa en la experiencia de Practical Action en 180 parcelas de pequeños productores no organizados en un entorno de ecosistemas frágiles de la selva alta de la región San Martín. Luego de la aplicación de estas prácticas, las y los productores vieron un aumento en sus ingresos mayor al 25% y percibieron un impacto positivo en su relación con el ecosistema local.
             </p>
@@ -82,33 +82,35 @@
             <div style="background-color: transparent;text-align: right;">
                 <img src="img/fot3/sello3A.png" height="132" width="157"/>
             </div>
-
-            <p>
+            <div style="padding: 20px; text-align: justify;">
+                <p>
             <span class="tituloCuadrado">
                 RENOVACIÓN DE CAFETALES <br/>
                 MEDIANTE SIEMBRAS NUEVAS
             </span>
-            </p>
-            <p class="textoCudadrado">
-                Consiste en la reinstalación de plantaciones de café en áreas
-                que anteriormente fueron cafetales, pero que dejaron de serlo
-                debido a diversos factores, entre ellos, la baja productividad,
-                el ataque de plagas y enfermedades, u otros.
-            </p>
-            <p>
+                </p>
+                <p class="textoCudadrado">
+                    Consiste en la reinstalación de plantaciones de café en áreas
+                    que anteriormente fueron cafetales, pero que dejaron de serlo
+                    debido a diversos factores, entre ellos, la baja productividad,
+                    el ataque de plagas y enfermedades, u otros.
+                </p>
+                <p>
             <span class="tituloCuadrado">
                 VENTAJAS
             </span>
-            <ul class="textoCudadrado">
-                <li>Incremento de productividad.</li>
-                <li>Mejor diseño de la plantación e instalación de sombra</li>
-                <li>temporal y definitiva</li>
-                <li>Reducción de costos.</li>
-                <li>Facilita las labores culturales y la incorporación de prácticas de conservación de suelos.</li>
-                <li>Permite introducir variedades de alta calidad en taza y</li>
-                <li>resistentes a plagas y enfermedades.</li>
-            </ul>
-            </p>
+                <ul class="textoCudadrado">
+                    <li>Incremento de productividad.</li>
+                    <li>Mejor diseño de la plantación e instalación de sombra</li>
+                    <li>temporal y definitiva</li>
+                    <li>Reducción de costos.</li>
+                    <li>Facilita las labores culturales y la incorporación de prácticas de conservación de suelos.</li>
+                    <li>Permite introducir variedades de alta calidad en taza y</li>
+                    <li>resistentes a plagas y enfermedades.</li>
+                </ul>
+                </p>
+            </div>
+
         </div>
     </div>
     <!----- FOTOGRAMA 04 ----->
@@ -204,10 +206,10 @@
     <div id="sec6" class="grid-sub-container" style="background-color:white;height: 530px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot6/fot6_mujer_ESTATICO.png" class="img-puestas" style="top:30%;left: 2%;z-index: 2;" />
-            <img src="img/fot6/fot6_brazoDER.png" class="img-puestas" style="top:39.3%;left: 9.8%; z-index: 4;" />
-            <img src="img/fot6/fot6_brazoIZQ.png" class="img-puestas" style="top:39.4%;left: 15.3%; z-index: 1;" />
-            <img src="img/fot6/fot6_tierra.png" class="img-puestas" style="top:50%;left: 33%; z-index: 3" />
-            <img src="img/fot6/fot6_tierra1.png" class="img-puestas" style="top:73%;left: 62%;z-index: 4;" />
+            <img id="brazo61" src="img/fot6/fot6_brazoDER.png" class="img-puestas" style="top:39.3%;left: 9.8%; z-index: 4;" />
+            <img id="brazo62" src="img/fot6/fot6_brazoIZQ.png" class="img-puestas" style="top:39.4%;left: 15.3%; z-index: 1;" />
+            <img id="tierra61" src="img/fot6/fot6_tierra.png" class="img-puestas" style="top:50%;left: 33%; z-index: 3" />
+            <img id="tierra62" src="img/fot6/fot6_tierra1.png" class="img-puestas" style="top:73%;left: 62%;z-index: 4;" />
         </div>
         <div style="background-color: transparent;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
@@ -242,14 +244,14 @@
     <div id="sec7" class="grid-sub-container" style="background-color:#eeeeee;height: 530px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot7/fot7_mujer_ESTATICO.png" class="img-puestas" style="top:26%;left: 10.3%;z-index: 2;" />
-            <img src="img/fot7/fot7_brazoDER.png" class="img-puestas" style="top:36.2%;left: 32.1%;z-index: 3;" />
-            <img src="img/fot7/fot7_brazoIZQ.png" class="img-puestas" style="top:36%;left: 41.5%;z-index: 1;" />
-            <img src="img/fot7/fot7_tierraABAJO.png" class="img-puestas" style="top:77.5%;left: 53%; z-index: 4;" />
-            <img src="img/fot7/fot7_tierraARRIBA.png" class="img-puestas" style="top:0%;left: 0%;" />
+            <img id="brazo71" src="img/fot7/fot7_brazoDER.png" class="img-puestas" style="top:36.2%;left: 32.1%;z-index: 3;" />
+            <img id="brazo72" src="img/fot7/fot7_brazoIZQ.png" class="img-puestas" style="top:36%;left: 41.5%;z-index: 1;" />
+            <img id="barro73" src="img/fot7/fot7_tierraABAJO.png" class="img-puestas" style="top:77.5%;left: 53%; z-index: 4;" />
+            <img id="barro74" src="img/fot7/fot7_tierraARRIBA.png" class="img-puestas" style="top:65%;left: 59.3%;z-index: 5;" />
         </div>
         <div style="background-color: transparent;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
-                <img src="img/fot7/sello3A.png" />
+                <img src="img/fot7/sello3A.png" style="max-width: 100%;" />
             </div>
 
             <span class="tituloCuadrado">
@@ -279,10 +281,10 @@
     <div id="sec8" class="grid-sub-container" style="background-color:white;height: 530px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot8/fot8_mujer-fondo_ESTATICO.png" class="img-puestas" style="top:40%;left: 10%;" />
-            <img src="img/fot8/fot8_mujer.png" class="img-puestas" style="top:35%;left: 38%;z-index: 2;" />
+            <img id="persona81" src="img/fot8/fot8_mujer.png" class="img-puestas" style="top:35%;left: 38%;z-index: 2;" />
             <img src="img/fot8/fot8_planta_creciendo.png" class="img-puestas" height="170px" style="top:36.2%;left: 17%;" />
-            <img src="img/fot8/fot8_tronco1.png" class="img-puestas" style="top:47.5%;left: 37%;z-index: 1;" />
-            <img src="img/fot8/fot8_tronco2.png" class="img-puestas" style="top:0%;left: 0%;" />
+            <img id="persona82" src="img/fot8/fot8_tronco1.png" class="img-puestas" style="top:47.5%;left: 37%;z-index: 1;" />
+            <img id="persona83" src="img/fot8/fot8_tronco2.png" class="img-puestas" style="top:66%;left: 39.5%;" />
         </div>
         <div style="background-color: transparent;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
@@ -314,8 +316,8 @@
     <div id="sec9" class="grid-sub-container" style="background-color:#eeeeee;height: 530px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot9/fot9_mujer_ESTATICO.png" class="img-puestas" style="top:26%;left: 10%;z-index: 4;" />
-            <img src="img/fot9/fot9_brazoDER.png" class="img-puestas" style="top:37%;left: 64%;z-index: 1;" />
-            <img src="img/fot9/fot9_brazoIZQ.png" class="img-puestas" style="top:34%;left: 11%;z-index: 5;" />
+            <img id="brazo91" src="img/fot9/fot9_brazoDER.png" class="img-puestas" style="top:37%;left: 64%;z-index: 1;" />
+            <img id="brazo92" src="img/fot9/fot9_brazoIZQ.png" class="img-puestas" style="top:34%;left: 11%;z-index: 5;" />
             <img src="img/fot9/fot9_mochila_ESTATICO.png" class="img-puestas" style="top:35.2%;left: 82.3%;z-index: 6;" />
         </div>
         <div style="background-color: transparent;width:510px;height: 520px">
@@ -350,9 +352,9 @@
     <!----- FOTOGRAMA 10 ----->
     <div id="sec10" class="grid-sub-container" style="background-color:white;height: 530px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
-            <img src="img/fot10/fot10_mujer_ESTATICO.png" class="img-puestas" style="top:20%;left: 12%;z-index: 2;" />
-            <img src="img/fot10/fot10_cafecitofruto.png" class="img-puestas" style="top:40%;left: 34%;z-index: 3;" />
-            <img src="img/fot10/fot10_mujerBRAZO.png" class="img-puestas" style="top:31%;left: 28.5%;z-index: 1;" />
+            <img src="img/fot10/fot10_mujer_ESTATICO.png" class="img-puestas" style="top:20%;left: 12%;z-index: 4;" />
+            <img id="fruto101" src="img/fot10/fot10_cafecitofruto.png" class="img-puestas" style="top:30%;left: 44%;z-index: 5;" />
+            <img id="fruto102" src="img/fot10/fot10_mujerBRAZO.png" class="img-puestas" style="top:25.2%;left: 31%;z-index: 3;" />
         </div>
         <div style="background-color: transparent;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
@@ -381,10 +383,10 @@
     <div id="sec11" class="grid-sub-container" style="background-color:#eeeeee;height: 530px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot11/fot11_mujer_ESTATICO.png" class="img-puestas" style="top:20%;left: 10%;" />
-            <img src="img/fot11/fot11_brazoconTIJERA1.png" class="img-puestas" style="top:42%;left: 24%;" />
-            <img src="img/fot11/fot11_brazoconTIJERA2.png" class="img-puestas" style="top:38.2%;left: 32.5%;" />
+            <img id="brazo111" src="img/fot11/fot11_brazoconTIJERA1.png" class="img-puestas" style="top:42%;left: 24%;" />
+            <img id="brazo112" src="img/fot11/fot11_brazoconTIJERA2.png" class="img-puestas" style="top:38.2%;left: 32.5%;" />
             <img src="img/fot11/fot11_hojas1.png" class="img-puestas" style="top:36%;left: 44%;" />
-            <img src="img/fot11/fot11_hojas2CAYENDOSE.png" class="img-puestas" style="top:50%;left: 43%;" />
+            <img id="hoja113" src="img/fot11/fot11_hojas2CAYENDOSE.png" class="img-puestas" style="top:50%;left: 43%;" />
             <img src="img/fot11/fot11_tijeraCIRCULO.png" class="img-puestas" style="top:46.7%;left: 44%;z-index: 4;" />
         </div>
         <div style="background-color: transparent;width:510px;height: 520px">
@@ -414,7 +416,7 @@
     <div id="sec12" class="grid-sub-container" style="background-color:white;height: 530px">
         <div style="background-color: transparent;position: relative;width:510px;height: 520px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot12/fot12_mujer_ESTATICO.png" class="img-puestas" style="top:20%;left: 10%;" />
-            <img src="img/fot12/fot12_brazos.png" class="img-puestas" style="top:25%;left: 37%;" />
+            <img id="brazo121" src="img/fot12/fot12_brazos.png" class="img-puestas" style="max-width:190px;top:27.5%;left: 43.5%;" />
         </div>
         <div style="background-color: transparent;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
@@ -482,8 +484,8 @@
     <!----- FOTOGRAMA 14 ----->
     <div id="sec14" class="grid-sub-container" style="background-color:white;height: 510px">
         <div style="background-color: transparent;position: relative;width:510px;height: 505px;max-width: 100%;margin: 0 auto;">
-            <img src="img/fot14/fot14_mujer_ESTATICO.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot14/fot14_brazos.png" class="img-puestas" style="top:0%;left: 0%;" />
+            <img src="img/fot14/fot14_mujer_ESTATICO.png" class="img-puestas" style="top:17%;left: 10%;" />
+            <img id="brazo141" src="img/fot14/fot14_brazos.png" class="img-puestas" style="max-width: 95px; top:55.4%;left:56.2%;" />
         </div>
         <div style="background-color: transparent;width:510px;height: 505px">
             <div style="background-color: transparent;text-align: right">
@@ -510,8 +512,8 @@
     <!----- FOTOGRAMA 15 ----->
     <div id="sec15" class="grid-sub-container" style="background-color:#eeeeee;height: 490px">
         <div style="background-color: transparent;position: relative;width:510px;height: 480px;max-width: 100%;margin: 0 auto;">
-            <img src="img/fot15/fot15_taza_ESTATICO.png" class="img-puestas" style="top:0%;left: 0%;" />
-            <img src="img/fot15/fot15_humo.png" class="img-puestas" style="top:0%;left: 0%;" />
+            <img src="img/fot15/fot15_taza_ESTATICO.png" class="img-puestas" style="top:38%;left: 12%;" />
+            <img id="humo151" src="img/fot15/fot15_humo.png" class="img-puestas" style="top:22%;left:44%;" />
         </div>
         <div style="background-color: transparent;width:510px;height: 480px">
             <span class="tituloCuadrado">
@@ -536,6 +538,7 @@
     </div>
 
 </div>
+
 </main>
 
 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
