--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div class="grid-container">
     <div style="background-color: #00FF7F;height: 190px; text-align: center;position: relative;">
-        <div style="height:150px;margin: 0;position: absolute;top: 50%;left: 50%;-ms-transform: translate(-50%, -50%);transform: translate(-50%, -50%);">
+        <div style="height:150px;margin: 0;position: relative;top: 50%;left: 50%;-ms-transform: translate(-50%, -50%);transform: translate(-50%, -50%);">
             <img zoom-in-up src="img/fot1/planta_intro.png" />
             <h4 class="subtitulo">Once tecnologías para una</h4>
             <h1 class="titulo">CAFICULTURA SOSTENIBLE</h1>
@@ -28,7 +28,7 @@
             <img id="Planta1Ft1" height="40px" src="img/fot1/fot1_plantaCRECER.png" class="img-puestas" style="top:50%;left: 63.5%;" />
             <img id="Planta2Ft1" height="40px" src="img/fot1/fot1_plantaCRECER.png" class="img-puestas" style="top:64.5%;left: 63%;" />
         </div>
-        <div style="background-color: transparent;width:510px;height: 470px;padding: 20px;text-align: justify;">
+        <div style="position: relative !important;max-height:100% !important;background-color: transparent;width:510px;height: 470px;padding: 20px;text-align: justify;">
             <p class="textoCudadrado">
                 A través de esta infografía, queremos compartir nuestra propuesta tecnológica con base en <b>once prácticas para una caficultura con enfoque climático y sostenible.</b>
             </p>
@@ -53,7 +53,7 @@
             <img src="img/fot2/fot2_ESTATICO.png" class="img-puestas" style="top:10%;left: 8%;" />
             <img id="plantaFt2" height="40px"  src="img/fot2/fot2_plantaCRECER.png" class="img-puestas" style="top:70%;left: 20%;" />
         </div>
-        <div id="sec2b" style="background-color: transparent;width:510px;height: 430px;padding: 20px;text-align: justify;">
+        <div id="sec2b" style="position: relative !important;max-height:100% !important;width:510px;height: 430px;padding: 20px;text-align: justify;">
             <p class="textoCudadrado">
                 Este aprendizaje se basa en la experiencia de Practical Action en 180 parcelas de pequeños productores no organizados en un entorno de ecosistemas frágiles de la selva alta de la región San Martín. Luego de la aplicación de estas prácticas, las y los productores vieron un aumento en sus ingresos mayor al 25% y percibieron un impacto positivo en su relación con el ecosistema local.
             </p>
@@ -78,7 +78,7 @@
             <img id="mano1Ft3" src="img/fot3/fot3_mujer1_mano2atras.png" class="img-puestas" style="top:34.9%;left: 35.2%;z-index: 2;"/>
             <img id="mano2Ft3" src="img/fot3/fot3_mujer1_mano1.png" class="img-puestas" style="top:35%;left: 25.1%;z-index: 4;"/>
         </div>
-        <div style="background-color: transparent;width:510px;height: 540px">
+        <div style="position: relative !important;max-height:100% !important;width:510px;height: 540px">
             <div style="background-color: transparent;text-align: right;">
                 <img src="img/fot3/sello3A.png" height="132" width="157"/>
             </div>
@@ -123,7 +123,7 @@
             <img id="Planta2Ft4" src="img/fot4/fot4_planta3.png" id="Planta3BFot4" class="img-puestas" style="top:65.8%;left: 12.8%;" />
             <img id="Planta3Ft4" src="img/fot4/fot4_planta4.png" id="Planta4AFot4" class="img-puestas" style="top:66%;left: 66%;" />
         </div>
-        <div style="background-color: transparent;width:510px;height: 540px">
+        <div style="position: relative;background-color: transparent;max-height:100%;width:510px;height: 540px">
             <div style="background-color: transparent;text-align: right">
                 <img src="img/fot4/sello3A.png" />
             </div>
@@ -164,7 +164,7 @@
             <img id="planta1Ft5" src="img/fot5/fot5_planta1.png" class="img-puestas" style="top:83%;left:46%" />
             <img id="planta2Ft5" src="img/fot5/fot5_planta2.png" class="img-puestas" style="top:83%;left: 79.7%"/>
         </div>
-        <div style="background-color: transparent;width:510px;height: 540px">
+        <div style="position: relative;background-color: transparent;max-height:100%;width:510px;height: 540px">
             <div style="background-color: transparent;text-align: right">
                 <img src="img/fot5/sello1A.png" />
             </div>
@@ -211,7 +211,7 @@
             <img id="tierra61" src="img/fot6/fot6_tierra.png" class="img-puestas" style="top:50%;left: 33%; z-index: 3" />
             <img id="tierra62" src="img/fot6/fot6_tierra1.png" class="img-puestas" style="top:73%;left: 62%;z-index: 4;" />
         </div>
-        <div style="background-color: transparent;width:510px;height: 520px">
+        <div style="position: relative;background-color: transparent;max-height:100%;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
                 <img src="img/fot6/sello1A.png" />
             </div>
@@ -249,7 +249,7 @@
             <img id="barro73" src="img/fot7/fot7_tierraABAJO.png" class="img-puestas" style="top:77.5%;left: 53%; z-index: 4;" />
             <img id="barro74" src="img/fot7/fot7_tierraARRIBA.png" class="img-puestas" style="top:65%;left: 59.3%;z-index: 5;" />
         </div>
-        <div style="background-color: transparent;width:510px;height: 520px">
+        <div style="position: relative;background-color: transparent;max-height:100%;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
                 <img src="img/fot7/sello3A.png" style="max-width: 100%;" />
             </div>
@@ -286,7 +286,7 @@
             <img id="persona82" src="img/fot8/fot8_tronco1.png" class="img-puestas" style="top:47.5%;left: 37%;z-index: 1;" />
             <img id="persona83" src="img/fot8/fot8_tronco2.png" class="img-puestas" style="top:66%;left: 39.5%;" />
         </div>
-        <div style="background-color: transparent;width:510px;height: 520px">
+        <div style="position: relative;background-color: transparent;max-height:100%;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
                 <img src="img/fot8/sello1A.png" />
             </div>
@@ -320,7 +320,7 @@
             <img id="brazo92" src="img/fot9/fot9_brazoIZQ.png" class="img-puestas" style="top:34%;left: 11%;z-index: 5;" />
             <img src="img/fot9/fot9_mochila_ESTATICO.png" class="img-puestas" style="top:35.2%;left: 82.3%;z-index: 6;" />
         </div>
-        <div style="background-color: transparent;width:510px;height: 520px">
+        <div style="position: relative;background-color: transparent;max-height:100%;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
                 <img src="img/fot9/sello2A.png" />
             </div>
@@ -356,7 +356,7 @@
             <img id="fruto101" src="img/fot10/fot10_cafecitofruto.png" class="img-puestas" style="top:30%;left: 44%;z-index: 5;" />
             <img id="fruto102" src="img/fot10/fot10_mujerBRAZO.png" class="img-puestas" style="top:25.2%;left: 31%;z-index: 3;" />
         </div>
-        <div style="background-color: transparent;width:510px;height: 520px">
+        <div style="position: relative;background-color: transparent;max-height:100%;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
                 <img src="img/fot10/sello2A.png" />
             </div>
@@ -389,7 +389,7 @@
             <img id="hoja113" src="img/fot11/fot11_hojas2CAYENDOSE.png" class="img-puestas" style="top:50%;left: 43%;" />
             <img src="img/fot11/fot11_tijeraCIRCULO.png" class="img-puestas" style="top:46.7%;left: 44%;z-index: 4;" />
         </div>
-        <div style="background-color: transparent;width:510px;height: 520px">
+        <div style="position: relative;background-color: transparent;max-height:100%;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
                 <img src="img/fot11/sello3A.png" />
             </div>
@@ -418,7 +418,7 @@
             <img src="img/fot12/fot12_mujer_ESTATICO.png" class="img-puestas" style="top:20%;left: 10%;" />
             <img id="brazo121" src="img/fot12/fot12_brazos.png" class="img-puestas" style="max-width:190px;top:27.5%;left: 43.5%;" />
         </div>
-        <div style="background-color: transparent;width:510px;height: 520px">
+        <div style="position: relative;background-color: transparent;max-height:100%;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
                 <img src="img/fot12/sello2A.png" />
             </div>
@@ -456,7 +456,7 @@
             <img src="img/fot13/fot13_mask3_agua.png" class="img-puestas" style="top:0%;left: 0%;" />
             <img src="img/fot13/fot13_tanqueATRAS.png" class="img-puestas" style="top:25%;left: 23%;z-index: 1;" />
         </div>
-        <div style="background-color: transparent;width:510px;height: 520px">
+        <div style="position: relative;background-color: transparent;max-height:100%;width:510px;height: 520px">
             <div style="background-color: transparent;text-align: right">
                 <img src="img/fot13/sello1A.png" />
             </div>
@@ -487,7 +487,7 @@
             <img src="img/fot14/fot14_mujer_ESTATICO.png" class="img-puestas" style="top:17%;left: 10%;" />
             <img id="brazo141" src="img/fot14/fot14_brazos.png" class="img-puestas" style="max-width: 95px; top:55.4%;left:56.2%;" />
         </div>
-        <div style="background-color: transparent;width:510px;height: 505px">
+        <div style="position: relative;background-color: transparent;max-height:100%;width:510px;height: 505px">
             <div style="background-color: transparent;text-align: right">
                 <img src="img/fot14/sello1A.png" />
             </div>
@@ -515,7 +515,7 @@
             <img src="img/fot15/fot15_taza_ESTATICO.png" class="img-puestas" style="top:38%;left: 12%;" />
             <img id="humo151" src="img/fot15/fot15_humo.png" class="img-puestas" style="top:22%;left:44%;" />
         </div>
-        <div style="background-color: transparent;width:510px;height: 480px">
+        <div style="position: relative;background-color: transparent;max-height:100%;width:510px;height: 480px">
             <span class="tituloCuadrado">
                 LOREM IPSUM
             </span>
