--- a/index.html
+++ b/index.html
@@ -23,23 +23,21 @@
     </div>
     <!----- FOTOGRAMA 01 ----->
     <div id="sec1" class="grid-sub-container" style="background-color: #eeeeee;height: 480px">
-        <div style="background-color: transparent;position: relative;width:510px;height: 470px;max-width: 100%;margin: 0 auto;">
+        <div style="position: relative;width:510px;height: 470px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot1/fot1_ESTATICO.png" class="img-puestas" style="top:10%;left: 9%;" />
             <img id="Planta1Ft1" height="40px" src="img/fot1/fot1_plantaCRECER.png" class="img-puestas" style="top:50%;left: 63.5%;" />
             <img id="Planta2Ft1" height="40px" src="img/fot1/fot1_plantaCRECER.png" class="img-puestas" style="top:64.5%;left: 63%;" />
         </div>
-        <div style="position: relative !important;max-height:100% !important;background-color: transparent;width:510px;height: 470px;padding: 20px;text-align: justify;">
+        <div style="width:510px;height: 470px;padding: 20px;text-align: justify;">
             <p class="textoCudadrado">
                 A través de esta infografía, queremos compartir nuestra propuesta tecnológica con base en <b>once prácticas para una caficultura con enfoque climático y sostenible.</b>
             </p>
             <p class="textoCudadrado">
                 Con ellas, los agricultores y agricultoras con los que hemos trabajado han logrado obtener beneficios como la disminución del daño ocasionado por las plagas y enfermedades, el ahorro por efecto de la disminución de la compra de insumos externos y una mayor producción de café de calidad.
             </p>
-
             <p class="textoCudadrado">
                 Hemos organizado estas prácticas en tres categorías según sus beneficios
             </p>
-
             <div style="background-color: transparent;">
                 <img src="img/estampas/sello3.png" height="121" width="139"/>
                 <img src="img/estampas/sello2.png" height="121" width="139"/>
@@ -48,12 +46,12 @@
         </div>
     </div>
     <!----- FOTOGRAMA 02 data-aos="fade-up" data-aos-duration="3000" ----->
-    <div class="grid-sub-container" style="background-color: white;height: 440px">
-        <div id="sec2" style="background-color: transparent;position: relative;width:510px;height: 430px;max-width: 100%;margin: 0 auto;">
+    <div id="sec2" class="grid-sub-container" style="background-color: white;height: 440px">
+        <div style="background-color: transparent;position: relative;width:510px;height: 430px;max-width: 100%;margin: 0 auto;">
             <img src="img/fot2/fot2_ESTATICO.png" class="img-puestas" style="top:10%;left: 8%;" />
             <img id="plantaFt2" height="40px"  src="img/fot2/fot2_plantaCRECER.png" class="img-puestas" style="top:70%;left: 20%;" />
         </div>
-        <div id="sec2b" style="position: relative !important;max-height:100% !important;width:510px;height: 430px;padding: 20px;text-align: justify;">
+        <div style="height: 430px;padding: 20px;text-align: justify;">
             <p class="textoCudadrado">
                 Este aprendizaje se basa en la experiencia de Practical Action en 180 parcelas de pequeños productores no organizados en un entorno de ecosistemas frágiles de la selva alta de la región San Martín. Luego de la aplicación de estas prácticas, las y los productores vieron un aumento en sus ingresos mayor al 25% y percibieron un impacto positivo en su relación con el ecosistema local.
             </p>
