--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 
 <div class="grid-container">
 
+    <div style="background-color: #00FF7F;height: 190px; text-align: center;position: relative;">
+        <div style="height:150px;margin: 0;position: relative;top: 50%;left: 50%;-ms-transform: translate(-50%, -50%);transform: translate(-50%, -50%);">
+            <img zoom-in-up src="img/fot1/planta_intro.png" />
+            <h4 class="subtitulo">Once tecnologías para una</h4>
+            <h1 class="titulo">CAFICULTURA SOSTENIBLE</h1>
+        </div>
+    </div>
+
     <!----- FOTOGRAMA 01 ----->
     <div id="sec1" class="grid-sub-container" style="background-color: #eeeeee;height: 480px">
         <div style="position: relative;width:510px;height: 470px;max-width: 100%;margin: 0 auto;">
